--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 	<div class="topper">
 		
-		<h1>GLG signature generator</h1>
+		<h1>GLG email signature generator</h1>
 		
 		<ol>
 			<li>Adjust the settings using the fields on the left side</li>
