--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<h1>GLG email signature generator</h1>
 		
 		<ol>
-			<li>Adjust the settings using the fields on the left side</li>
+			<li>Adjust the settings for correct logo, name and phone.</li>
 			<li>Click Submit to see updated signature changes</li>
 			<li>Copy signature to clipboard</li>
 			<li>Create a new signature in Gmail and paste in the copied signature</li>
