Logo sizing CSS

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<tbody>
 				<tr>
 					<td class="logo" id="signatureLogo" style="width: 70px; vertical-align: top;">
-						<a href="https://glg.law" target="_blank" style="color: inherit;"><img src="https://images.squarespace-cdn.com/content/67a133638f24af00b190e546/3387bc26-8a75-4bf8-ae73-434974665275/glg-arrow-green.png" width="50" style="display: block; width: 50px; max-width: 50px;" /></a>
+						<a href="https://glg.law" target="_blank" style="color: inherit;"><img src="https://images.squarespace-cdn.com/content/67a133638f24af00b190e546/3387bc26-8a75-4bf8-ae73-434974665275/glg-arrow-green.png" width="50" style="display: block; width: 50px; min-width: 50px; max-width: 50px;" /></a>
 					</td>
 					<td class="name-block" style="vertical-align: top;">
 						<p style="margin: 10px 0 0 0; font-weight: bold; font-size: 12pt;"><span id="signatureName">Firstname Lastname</span></p>
